--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
 # See https://www.dartlang.org/guides/libraries/private-files
+# Miscellaneous
+*.class
+*.log
+*.pyc
+*.swp
+.DS_Store
+.atom/
+.buildlog/
+.history
+.svn/
+migrate_working_dir/
 
 # Files and directories created by pub
 .dart_tool/
@@ -11,6 +22,26 @@ pubspec.lock
 # If you don't generate documentation locally you can remove this line.
 doc/api/
 
+# IntelliJ related
+*.iml
+*.ipr
+*.iws
+.idea/
+
+# The .vscode folder contains launch configuration and tasks you configure in
+# VS Code which you may wish to be included in version control, so this line
+# is commented out by default.
+#.vscode/
+
+# Flutter/Dart/Pub related
+**/doc/api/
+**/ios/Flutter/.last_build_id
+.dart_tool/
+.flutter-plugins
+.flutter-plugins-dependencies
+.packages
+.pub-cache/
+.pub/
 # dotenv environment variables file
 .env*
 
