--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,9 @@ ios/Runner.xcodeproj/project.pbxproj
 *.xcworkspacedata
 ios/Runner.xcworkspace/contents.xcworkspacedata
 ios/Runner.xcworkspace/contents.xcworkspacedata
+ios/Runner.xcworkspace/contents.xcworkspacedata
+*.pbxproj
+*.xcworkspacedata
+ios/Runner.xcworkspace/contents.xcworkspacedata
+*.xcworkspacedata
+*.pbxproj
